# ai_run_company_with_docs

./: .gitignore  README.md
company-ops/: .gitignore  CHARTER.md  CLAUDE.md  CONSTITUTION.yaml  global-graph.json
company-ops/.system/scripts/: start-company.sh  status.py
company-ops/.system/tests/: test_accumulator.py  test_integration.py  test_knowledge_engine.py  test_wiki_client.py
company-ops/docs/: knowledge-engine-usage.md  requirements.md
company-ops/docs/architecture/: 01-overview.md  (+3 more)
company-ops/orchestrator/: VERIFICATION_REPORT.md  cc-connector-guide.md  monitor.sh
company-ops/scripts/: init_subsystem.py  setup-subsystem.sh
company-ops/subsystems/task-system/: .gitignore  Cargo.toml  cops.toml.example
company-ops/subsystems/task-system/src/: config.rs  error.rs  lib.rs  main.rs
company-ops/subsystems/task-system/src/api/: mod.rs
company-ops/subsystems/task-system/src/cli/: args.rs  board.rs  comment.rs  config_cmd.rs  ctx.rs  db_cmd.rs  mod.rs  output.rs  question.rs  status.rs  task.rs  web.rs
company-ops/subsystems/task-system/src/config/: mod.rs
company-ops/subsystems/task-system/src/core/: comment.rs  events.rs  mod.rs  question.rs  task.rs
company-ops/subsystems/task-system/src/db/: comment_repo.rs  event_repo.rs  mod.rs  pool.rs  question_repo.rs  repository.rs  task_repo.rs
company-ops/subsystems/task-system/src/db/migrations/: 001_initial.sql
docs/: workflow.md
docs/architecture/: 01-overview.md  02-document-system.md  03-knowledge-graph.md  06-human-interface.md  README.md
docs/workflows/: implementation-workflow-v1.md
(+58 files in other folders)
