[package]
name = "cops"
version = "0.1.0"
edition = "2021"
description = "Company Operations Task Management System"

[[bin]]
name = "cops"
path = "src/main.rs"

[lib]
name = "cops"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "mysql", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
